[package]
name = "advent-of-rust-2019"
version = "0.1.0"
authors = ["Hugo Tunius <h@tunius.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
ansi_term = "0.12"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "intcode"
harness = false
